# project-embedidos

./: .gitignore  README.md  requirements.txt
T1/: CMakeLists.txt
T1/main/: CMakeLists.txt  Kconfig.projbuild  T1.c
esp_code/: CMakeLists.txt
esp_code/components/bme688/: CMakeLists.txt  bme68x.c  bme_main.c  i2c_simple_main.c
esp_code/components/bme688/include/: bme68x.h
esp_code/main/: CMakeLists.txt  main.c
python_code/: .pdm-python  main_gui.py  pyproject.toml  test_gui.py
python_code/src/: main.py  main_gui.py
python_code/src/utils/: serial_coms.py
python_code/utils/: base.ui
