
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "alberto-abarzua", email = "uintuser@pm.me"},
]
dependencies = [
    "PyQt5>=5.15.9",
    "pyserial>=3.5",
    "pyqt5-tools>=5.15.9.3.3",
    "matplotlib>=3.7.1",
    "isort>=5.12.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
isort = "isort src"
black = "black src"
lint = "flake8 src"
format = {composite = ["isort", "black"]}